# eco-cycle-prep

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  main.py  pyproject.toml  tasks.py
.coily/: coily.yaml
docs/: FEATURES.md  biomes.md  worldgen.md
eco_cycle_prep/: announce.py  cli.py  discord_post.py  golive.py  goprivate.py  mods.py  narrative.py  prep.py  remote.py  roll.py
eco_cycle_prep/narrative/: features.py  text.py
eco_cycle_prep/templates/: ingame-description.md.tmpl  sirens-configs-channel.md.tmpl
eco_map_generator/: announce.py  discord_rest.py  prep.py  remote.py  roll.py
