[project]
name = "eco-map-generator"
version = "0.1.0"
description = "Generate and evaluate Eco world-gen maps."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "invoke>=2.2",
    "boto3>=1.34",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["eco_map_generator"]
